Fix hero logo vertical spacing

--- a/style.css
+++ b/style.css
@@ -356,6 +356,7 @@ body {
 }
 .hero__logo {
   width: 150px;
+  height: 100%;
 }
 .hero__title {
   font-family: 'Roboto Slab', serif;
